infrastructure/kubernetes/installation/manual/Longhorn/longhorn-ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # type of authentication
    #nginx.org/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    #nginx.org/redirect-to-https: 'True'
    ingress.kubernetes.io/ssl-redirect: 'False'
    # name of the secret that contains the user/password definitions
    # nginx.org/basic-auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    # nginx.org/basic-auth-realm: 'Authentication Required'
    # custom max body size for file uploading like backing image uploading
    nginx.org/client-max-body-size: 10000m
spec:
  rules:
  - host: longhorn.locthp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
